# deep_faceswap

./: .gitignore  Cargo.toml  Makefile  README.md
deep_faceswap_api/: Cargo.toml
deep_faceswap_api/src/: error.rs  jobs.rs  main.rs  services.rs  state.rs
deep_faceswap_api/src/services/: crops.rs  detect.rs  files.rs  health.rs  jobs.rs  serve_file.rs  swap_image.rs  video.rs
deep_faceswap_cli/: Cargo.toml
deep_faceswap_cli/src/: main.rs
deep_faceswap_core/: Cargo.toml
deep_faceswap_core/benches/: README.md  optimization_bench.rs
deep_faceswap_core/src/: detection.rs  error.rs  lib.rs  preprocess.rs  recognition.rs  swapper.rs
deep_faceswap_core/src/alignment/: alignment.rs  mod.rs
deep_faceswap_core/src/clustering/: kmeans.rs  mod.rs
deep_faceswap_core/src/detection/: detection.rs
deep_faceswap_core/src/enhancer/: enhancer.rs  mod.rs
deep_faceswap_core/src/landmark/: landmark.rs  mod.rs
deep_faceswap_core/src/mouth_mask/: mod.rs  mouth_mask.rs
deep_faceswap_core/src/multi_face/: mod.rs  prompt.rs  selection.rs
deep_faceswap_core/src/recognition/: recognition.rs
deep_faceswap_core/src/swap/: swap.rs
deep_faceswap_core/src/swapper/: mod.rs  swapper.rs
deep_faceswap_core/src/types/: types.rs
deep_faceswap_core/src/utils/: blur.rs  color.rs  cv.rs  embedding.rs  image.rs  media.rs  mod.rs  rgb.rs  transform.rs  vector.rs
deep_faceswap_core/src/verbose/: mod.rs  verbose.rs
deep_faceswap_core/src/video/: analysis.rs  encoding.rs  extraction.rs  mod.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: app.css  app.d.ts
frontend/src/lib/: api.js  api_error.js  cluster_info.js  cluster_mapping.js  connection.js  face_info.js  face_mapping.js  file_entry.js
frontend/src/lib/components/: FaceCropGrid.svelte  FaceMapper.svelte  FileBrowser.svelte  Lightbox.svelte  MediaPreview.svelte  OptionsBar.svelte  PathInput.svelte  ProgressBar.svelte  SourcePathList.svelte  StepIndicator.svelte
frontend/src/lib/stores/: detection.js  files.js  health.js  jobs.js  swap.js  video.js
frontend/src/routes/: +layout.svelte  +page.js  +page.svelte
frontend/src/routes/image/: +page.svelte
frontend/src/routes/images/: +page.svelte
frontend/src/routes/video/: +page.svelte
scripts/: download_buffalo_l.sh  download_gfpgan.sh  download_inswapper.sh  download_models.sh
scripts/python/: requirements-torch2onnx.txt
scripts/python/torch2onnx/: GFPGANReconsitution.py  README.md  noise_main.py  torch2onnx.py
