[workspace]
resolver = "2"
members = [
    "deep_faceswap_core",
    "deep_faceswap_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dimitrii"]
license = "MIT"

[workspace.dependencies]
# Image processing
image = "0.25"
ndarray = "0.17"

# ML/AI
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs", "tracing"] }

# Utilities
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
