[package]
name = "deep_faceswap_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
# Image processing
image.workspace = true
ndarray.workspace = true

# ML/AI
ort.workspace = true

# Utilities
rand = "0.8"
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Video processing
ffmpeg-next.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx = "0.5"  # For float comparisons in tests
criterion = "0.5"

[[bench]]
name = "optimization_bench"
harness = false
